--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
